--- a/debug/home_ffff.dSYM/Contents/Info.plist
+++ b/debug/home_ffff.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.ffff</string>
+		<string>com.apple.xcode.dsym.home_ffff</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
